--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,11 +62,11 @@ flutter:
   # example:
   # fonts:
   #   - family: Montserrat
-  #     fonts:
-  #       - asset: assets/fonts/Montserrat-Regular.ttf
-  #         weight: 300
-  #       - asset: assets/fonts/Montserrat-Bold.ttf
-  #         weight: 600
+      fonts:
+        - asset: assets/fonts/Montserrat-Regular.ttf
+          weight: 300
+        - asset: assets/fonts/Montserrat-Bold.ttf
+          weight: 600
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
